--- a/app/views/share/_sidebar.html.erb
+++ b/app/views/share/_sidebar.html.erb
@@ -13,70 +13,68 @@
                         </a>
                     </h4>
                 </div>
-            <% if cat.sub_cat.length > 0%>
-                <div id="<%= cat.name %>" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <ul>
-                        <% cat.sub_cat.each do |s_c| %>
-                            <li>
-                                <a href="#prods">
-                                    <%= s_c["name"] %>
-                                </a>
-                            </li>
-                        <% end %>
-                        </ul>
+                <% if cat.sub_cat.length > 0%>
+                    <div id="<%= cat.name %>" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <ul>
+                                    <li>
+                                        <a href="#prods">
+                                            <% cat.sub_cat.first['sub'] %>
+                                        </a>
+                                    </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            <% end %>
+                    <% end %>
             </div>
-        <% end %>
+            <% end %>
     </div>
     <!--/category_products-->
 
-        <!--brands_products-->
-        <div class="brands_products">
-            <h2>Brands</h2>
-            <div class="brands-name">
-                <ul class="nav nav-pills nav-stacked">
-                    <% @brands.each do |b| %>
-                        <li>
-                            <a href="#prods">
-                                <span class="pull-right">(<%= b.qTy %>) </span>
-                                <%= b.name %>
-                            </a>
-                        </li>
+    <!--brands_products-->
+    <div class="brands_products">
+        <h2>Brands</h2>
+        <div class="brands-name">
+            <ul class="nav nav-pills nav-stacked">
+                <% @brands.each do |b| %>
+                    <li>
+                        <a href="#prods">
+                            <span class="pull-right">(<%= b.qTy %>) </span>
+                            <%= b.name %>
+                        </a>
+                    </li>
                     <% end %>
-                </ul>
-            </div>
+            </ul>
         </div>
-        <!--/brands_products-->
+    </div>
+    <!--/brands_products-->
 
-        <!--price-range-->
-        <div class="price-range">
-            <h2>Price Range</h2>
-            <div class="well text-center">
-                <div class="slider slider-horizontal" style="width: 110px;">
-                    <div class="slider-track">
-                        <div class="slider-selection" style="left: 40%; width: 1.66667%;"></div>
-                        <div class="slider-handle round left-round" style="left: 40%;"></div>
-                        <div class="slider-handle round" style="left: 41.6667%;"></div>
-                    </div>
-                    <div class="tooltip top in" style="top: -30px; left: 11.9167px;">
-                        <div class="tooltip-arrow"></div>
-                        <div class="tooltip-inner">250 : 315</div>
-                    </div>
-                    <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2">
+    <!--price-range-->
+    <div class="price-range">
+        <h2>Price Range</h2>
+        <div class="well text-center">
+            <div class="slider slider-horizontal" style="width: 110px;">
+                <div class="slider-track">
+                    <div class="slider-selection" style="left: 40%; width: 1.66667%;"></div>
+                    <div class="slider-handle round left-round" style="left: 40%;"></div>
+                    <div class="slider-handle round" style="left: 41.6667%;"></div>
                 </div>
-                <br>
-                <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
+                <div class="tooltip top in" style="top: -30px; left: 11.9167px;">
+                    <div class="tooltip-arrow"></div>
+                    <div class="tooltip-inner">250 : 315</div>
+                </div>
+                <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2">
             </div>
+            <br>
+            <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
         </div>
-        <!--/price-range-->
+    </div>
+    <!--/price-range-->
 
-        <!--shipping-->
-        <div class="shipping text-center">
-            <img src="/images/home/shipping.jpg" alt="">
-        </div>
-        <!--/shipping-->
-
+    <!--shipping-->
+    <div class="shipping text-center">
+        <img src="/images/home/shipping.jpg" alt="">
+    </div>
+    <!--/shipping-->
+</div>
 </div>
